k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartlingua
  labels:
    app.kubernetes.io/managed-by: kubectl
    project: smartlingua
